added context diagram

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -663,6 +663,13 @@ The use case diagram depicted below identifies the boundaries between the users 
 \textbf{Post-condition:} The fees for facilitating the project have been paid\\
 \textbf{Related:} \hyperref[sec:FR3]{FR3}
 
+\subsection*{Context Diagram}
+\begin{figure}[H]
+  \includegraphics[scale=0.3]{contextdiagram.png}
+  \caption{Context Diagram}
+      \label{fig:context}
+  \end{figure}
+
 \newpage
 \section{Functional Requirements}
 \subsection{Functional Requirements}
