added intended audience

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -105,6 +105,47 @@ Beyond the primary stakeholders, other key groups that benefit from high-quality
     \item \textbf{Image Labeling Teams:} Manually classify and annotate satellite images. Their work is crucial for building accurate datasets, and they benefit from improved tools and clearer guidelines to make the labeling process more efficient.
 \end{itemize}
 
+\subsection{Intended Audience}
+
+This section outlines the primary, secondary, and tertiary audiences for this document, along with the scope of knowledge assumed and its relevance for onboarding and continued project development.
+
+\subsection{Primary Audience}
+\begin{itemize}
+    \item \textbf{Development Team:} This document is intended for future developers and engineers working on the project. It assumes a technical background in areas such as crowdsourcing platforms, satellite image processing, and AI modeling.
+    \item \textbf{Current Team Members:} The document provides a foundation for tracking design decisions and assumptions made by the original developers, who possess expertise in data processing, backend development, and labeling systems.
+\end{itemize}
+
+\subsection{Secondary Audience}
+\begin{itemize}
+    \item \textbf{Project Stakeholders:} Stakeholders, including clients, NGOs, or government agencies, may refer to this document to understand technical decisions, product constraints, and the alignment with business goals.
+    \item \textbf{Platform Maintenance Technicians:} The document is relevant for ensuring ongoing maintenance and troubleshooting, offering a detailed understanding of system requirements and operations.
+\end{itemize}
+
+\subsection{Tertiary Audience}
+\begin{itemize}
+    \item \textbf{Future Researchers or Collaborators:} Academics or collaborators interested in extending the platform’s functionality can use this document as a foundation.
+    \item \textbf{QA and Testing Teams:} The functional and non-functional requirements detailed in this document can be utilized for validation and verification processes.
+\end{itemize}
+
+\subsection{Scope of Knowledge Assumed}
+\begin{itemize}
+    \item \textbf{For Developers:} Familiarity with web-based systems, satellite data, and crowdsourcing concepts is assumed.
+    \item \textbf{For Stakeholders:} A non-technical summary ensures usability and alignment with business objectives without requiring in-depth technical knowledge.
+\end{itemize}
+
+\subsection{Relevance for Onboarding}
+This document serves as a foundational resource for onboarding new team members, providing insights into the project’s purpose, requirements, and future scalability. It should be updated regularly and used during project handovers or expansions to ensure continuity and adaptability.
+
+\subsection{Access and Use Cases}
+The intended audience is encouraged to use this document as a reference during:
+\begin{itemize}
+    \item Development and feature additions.
+    \item Maintenance and troubleshooting.
+    \item Stakeholder presentations and updates.
+    \item Testing and quality assurance efforts.
+\end{itemize}
+
+
 \subsection{Hands-On Users of the Project}
 Users: These are individuals or entities responsible for labeling the data on the platform. In return for their efforts, they receive compensation. Their primary role is to ensure that the datasets are correctly annotated according to specified requirements, which forms the basis of the models developed. Their work directly impacts the quality and usability of the final product.
 
