added security as objective

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -97,6 +97,7 @@ start with a review of the system, a description of the testing plan, and a list
   \begin{itemize}
       \item \textbf{Ensure High Data Accuracy}: Build confidence in the software's correctness by verifying that the system achieves high classification accuracy for objects reported in the images. This is crucial for extracting useful information and providing value to stakeholders.
       \item \textbf{Validate System Reliability and Accessibility}: Confirm that the system is reliable with minimal downtime and is accessible remotely for both purchasers and labelers, ensuring flexibility and efficiency in usage.
+      \item \textbf{Ensure Data Confidentiality and Secure Access}: Implement robust authentication mechanisms and encryption protocols to protect sensitive satellite image data and user information, ensuring access is restricted to authorized users only.
   \end{itemize}
   
   The following objectives are out of scope for this V\&V plan:
